--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -350,6 +350,15 @@ html {
 
 }
 
+.col-50 {
+  width: 49%;
+  float: left;
+
+  &.right {
+    float: right;
+  }
+}
+
 .box-product-slider {
   border-radius: 10px;
   border: 1px solid $primary-color;
@@ -412,6 +421,7 @@ html {
     max-height: 200px;
     height: 200px;
     border: 1px solid $primary-color;
+    box-shadow: 0 0 3px 5px rgba(14, 43, 61, 0.5);
 
     a {
       height: 200px;
@@ -433,6 +443,7 @@ html {
   visibility: visible;
   position: relative;
   left: 0;
+
   .box-title {
 
     //border-top-left-radius: 10px;
@@ -461,6 +472,7 @@ html {
     width: 100%;
     height: 810px;
     overflow: hidden;
+
     ul {
       background: none repeat scroll 0 0 #F7F9F8;
       float: left;
@@ -478,15 +490,17 @@ html {
         width: 268px;
 
         a {
-          &.img{
+          &.img {
             overflow: hidden;
             height: 220px;
             display: flex;
-            img{
+
+            img {
               display: flex;
               object-fit: cover;
             }
           }
+
           color: $primary-color;
           display: block;
           font: bold 15px/20px Tahoma;
@@ -531,7 +545,7 @@ html {
     -moz-border-radius: 10px;
     -webkit-border: 1px solid $primary-color;
     border: 1px solid $primary-color;
-    max-height: 100vh;
+    max-height: 820px;
     overflow-y: scroll;
     position: relative;
   }
