--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -709,9 +709,9 @@ html {
 
 @media (max-height: 467px) {
   .header-style02 {
-    width: 1000px;
+    width: 1000px!important;
   }
   #footer-wrapper {
-    width: 1000px;
+    width: 1000px!important;
   }
 }
