--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -478,9 +478,9 @@ html {
 
 @media (max-height: 467px) {
   .header-style02 {
-    width: 1000px; }
+    width: 1000px !important; }
 
   #footer-wrapper {
-    width: 1000px; } }
+    width: 1000px !important; } }
 
 /*# sourceMappingURL=custom.css.map */
