--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -69,7 +69,7 @@ html {
 
 .header-style02 {
   background: #0e2b3d;
-  width: 100%;
+  width: 1000px;
   margin: auto; }
   .header-style02 .logo {
     display: flex;
