--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -660,7 +660,7 @@ html {
 
 #footer-wrapper.footer-light {
   border-top: unset;
-  width: 100%;
+  width: 1000px;
   margin: auto;
 
   &.heading {
