--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -9,6 +9,14 @@ html {
   margin: auto !important;
 }
 
+.w-75 {
+  width: 75%;
+}
+
+.w-25 {
+  width: 25%;
+}
+
 .container {
   margin: auto;
   width: 1000px;
