--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -7,9 +7,13 @@ html {
 
 .w-75 {
   width: 75%; }
+  .w-75.w-left {
+    float: right; }
 
 .w-25 {
   width: 25%; }
+  .w-25.w-right {
+    float: right; }
 
 .container {
   margin: auto;
