--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -16,6 +16,8 @@ html {
     float: right; }
 
 .container {
+  margin-left: 0;
+  margin-right: 0;
   margin: auto;
   width: 1000px;
   max-width: none !important; }
