--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -365,7 +365,7 @@ html {
     flex-direction: row;
 
     &.bx-left {
-      background: url("../img/sys_pp.jpg") no-repeat;
+      background: url("../img/sys_pp.png") no-repeat;
       margin-right: 5px;
     }
 
