--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -5,16 +5,6 @@ html {
   overflow-x: hidden !important;
   margin: auto !important; }
 
-.w-75 {
-  width: 75%; }
-  .w-75.w-left {
-    float: left; }
-
-.w-25 {
-  width: 25%; }
-  .w-25.w-right {
-    float: right; }
-
 .container {
   margin-left: 0;
   margin-right: 0;
@@ -65,11 +55,17 @@ html {
 .pl-1 {
   padding-left: 10px; }
 
+.pb-1 {
+  padding-bottom: 10px; }
+
 .pr-1 {
   padding-right: 10px; }
 
 .ml-1 {
   margin-left: 10px; }
+
+.mb-1 {
+  margin-bottom: 10px; }
 
 .mt-5 {
   margin-top: 6px; }
@@ -151,6 +147,7 @@ html {
   float: none; }
 
 .social-icons {
+  justify-content: center;
   display: flex;
   list-style: none;
   margin-top: 20px; }
@@ -370,6 +367,7 @@ html {
   position: relative;
   margin-top: 5px; }
   .box-detail .box-title {
+    text-transform: uppercase;
     background: url("../img/tagtitle.jpg") no-repeat scroll 0 0 transparent;
     color: #FFFFFF;
     font-size: 16px;
@@ -394,8 +392,10 @@ html {
     -webkit-border: 1px solid #0e2b3d;
     border: 1px solid #0e2b3d;
     max-height: 820px;
+    min-height: 820px;
     overflow-y: scroll;
-    position: relative; }
+    position: relative;
+    text-align: justify; }
 
 .form-contact {
   margin-bottom: 20px;
@@ -463,10 +463,29 @@ html {
 .text-center {
   text-align: center; }
 
+.brand-logo {
+  font-size: 25px;
+  margin-top: 20px;
+  background: -webkit-linear-gradient(#6d9dba, #335b74);
+  background: linear-gradient(#6d9dba, #335b74);
+  background: -moz-linear-gradient(#6d9dba, #335b74);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
+
 #footer-wrapper.footer-light {
   border-top: unset;
   width: 100%;
   margin: auto; }
+  #footer-wrapper.footer-light .center-content {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin: auto; }
+    #footer-wrapper.footer-light .center-content .w-left {
+      width: 60%;
+      margin-right: 50px; }
+    #footer-wrapper.footer-light .center-content .w-right {
+      width: 20%; }
   #footer-wrapper.footer-light.heading {
     margin-bottom: 0;
     background: #0e2b3d;
@@ -477,7 +496,7 @@ html {
     #footer-wrapper.footer-light.heading p {
       margin: 0;
       padding-bottom: 0;
-      font-size: 16px;
+      font-size: 14px;
       color: white; }
       #footer-wrapper.footer-light.heading p a {
         color: white;
