--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -9,21 +9,6 @@ html {
   margin: auto !important;
 }
 
-.w-75 {
-  width: 75%;
-
-  &.w-left {
-    float: left;
-  }
-}
-
-.w-25 {
-  width: 25%;
-
-  &.w-right {
-    float: right;
-  }
-}
 
 .container {
   margin-left: 0;
@@ -100,6 +85,10 @@ html {
   padding-left: 10px;
 }
 
+.pb-1 {
+  padding-bottom: 10px;
+}
+
 .pr-1 {
   padding-right: 10px;
 }
@@ -107,7 +96,9 @@ html {
 .ml-1 {
   margin-left: 10px;
 }
-
+.mb-1{
+  margin-bottom: 10px;
+}
 .mt-5 {
   margin-top: 6px;
 }
@@ -237,6 +228,7 @@ html {
 }
 
 .social-icons {
+  justify-content: center;
   display: flex;
   list-style: none;
   margin-top: 20px;
@@ -554,6 +546,7 @@ html {
   margin-top: 5px;
 
   .box-title {
+    text-transform: uppercase;
     background: url("../img/tagtitle.jpg") no-repeat scroll 0 0 transparent;
     color: #FFFFFF;
     font-size: 16px;
@@ -581,8 +574,10 @@ html {
     -webkit-border: 1px solid $primary-color;
     border: 1px solid $primary-color;
     max-height: 820px;
+    min-height: 820px;
     overflow-y: scroll;
     position: relative;
+    text-align: justify;
   }
 }
 
@@ -685,10 +680,36 @@ html {
   text-align: center;
 }
 
+.brand-logo {
+  font-size: 25px;
+  margin-top: 20px;
+  background: -webkit-linear-gradient(#6d9dba, #335b74);
+  background: linear-gradient(#6d9dba, #335b74);
+  background: -moz-linear-gradient(#6d9dba, #335b74);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 #footer-wrapper.footer-light {
   border-top: unset;
   width: 100%;
   margin: auto;
+
+  .center-content {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin: auto;
+
+    .w-left {
+      width: 60%;
+      margin-right: 50px;
+    }
+
+    .w-right {
+      width: 20%;
+    }
+  }
 
   &.heading {
     margin-bottom: 0;
@@ -703,7 +724,7 @@ html {
     p {
       margin: 0;
       padding-bottom: 0;
-      font-size: 16px;
+      font-size: 14px;
       color: white;
 
       a {
