--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -396,6 +396,9 @@ html {
     overflow-y: scroll;
     position: relative;
     text-align: justify; }
+    .box-detail .box-content p {
+      font-size: 15px !important;
+      color: black !important; }
 
 .form-contact {
   margin-bottom: 20px;
@@ -409,6 +412,7 @@ html {
   padding-bottom: 10px; }
   .box-post .content {
     padding: 10px;
+    margin-top: -20px;
     position: relative; }
     .box-post .content a.read-more {
       color: white;
