--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -770,6 +770,7 @@ html {
 .btn-order {
   background: $primary-color;
   color: white;
+  margin-top: 20px;
   padding: 5px 10px;
   border-radius: 30px;
 }
