--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -521,6 +521,7 @@ html {
 .btn-order {
   background: #0e2b3d;
   color: white;
+  margin-top: 20px;
   padding: 5px 10px;
   border-radius: 30px; }
 
