--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1148,20 +1148,20 @@ nav {
     }
   }
   .row-bg {
-    padding: 0;
+    padding: 0!important;
 
     &:before {
-      width: 100%;
-      left: 0;
+      width: 100% !important;
+      left: 0!important;
     }
   }
   .list-item {
-    -webkit-column-count: 1;
+    -webkit-column-count: 1!important;
     -moz-column-count: 1;
     column-count: 1;
 
     &.column-2 {
-      -webkit-column-count: 1;
+      -webkit-column-count: 1!important;
       -moz-column-count: 1;
       column-count: 1;
     }
