--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -713,15 +713,20 @@ nav a {
       object-fit: cover; }
 
   #blog-1 {
-    padding-top: 0 !important; }
+    padding-top: 15px !important; }
 
   .img-absolute img {
     position: relative !important;
     width: 100% !important;
     left: 0 !important; }
 
+  .gtcl {
+    padding-top: 30px; }
+    .gtcl .content {
+      margin-bottom: 20px; }
+
   .row-bg {
-    padding: 0 !important; }
+    padding: 20px 0 !important; }
     .row-bg:before {
       width: 100% !important;
       left: 0 !important; }
