--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -365,7 +365,7 @@ html {
     }
 
     &.bx-right {
-      background: url("../img/poll.jpg") no-repeat;
+      background: url("../img/poll.png") no-repeat;
       margin-left: 5px;
     }
 
