--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -439,6 +439,7 @@ html {
       margin-top: 10px;
       color: $primary-color;
       text-align: center;
+      text-transform: uppercase;
     }
   }
 
@@ -695,12 +696,12 @@ html {
 
 .brand-logo {
   font-size: 25px;
-  margin-top: 20px;
   background: -webkit-linear-gradient(#6d9dba, #335b74);
   background: linear-gradient(#6d9dba, #335b74);
   background: -moz-linear-gradient(#6d9dba, #335b74);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin: auto;
 }
 
 #footer-wrapper.footer-light {
