--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -312,6 +312,9 @@ html {
         display: flex;
         object-fit: cover; }
 
+.text-primary {
+  color: #0e2b3d; }
+
 .box-vertical {
   margin-top: 5px;
   visibility: visible;
