--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -468,7 +468,9 @@ html {
     }
   }
 }
-
+.text-primary{
+  color: $primary-color;
+}
 .box-vertical {
   margin-top: 5px;
   visibility: visible;
