--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -171,6 +171,7 @@ html {
   color: #FFFFFF;
   font-size: 16px;
   height: 39px;
+  text-transform: uppercase;
   left: 9px;
   margin-bottom: -20px;
   line-height: 39px;
