--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -564,7 +564,7 @@ html {
     display: flex;
     justify-content: center;
     margin-bottom: -20px;
-    line-height: 40px;
+    line-height: 48px;
     text-align: center;
     position: relative;
     background-size: 100% 100%;
@@ -595,6 +595,7 @@ html {
     p {
       font-size: 15px !important;
       color: black !important;
+      padding: 0;
     }
 
     span {
