--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -402,6 +402,8 @@ html {
     overflow-y: scroll;
     position: relative;
     text-align: justify; }
+    .box-detail .box-content td {
+      vertical-align: top; }
     .box-detail .box-content ul {
       list-style: none !important; }
     .box-detail .box-content p {
