--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -587,7 +587,9 @@ html {
     overflow-y: scroll;
     position: relative;
     text-align: justify;
-
+    td{
+      vertical-align: top;
+    }
     ul {
       list-style: none !important;
     }
