--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -389,6 +389,10 @@ html {
     float: right;
   }
 }
+video[poster]{
+  height:100%;
+  width:100%;
+}
 
 .box-product-slider {
   border-radius: 10px;
