--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -257,9 +257,13 @@ html {
   .col-50.right {
     float: right; }
 
+video {
+  margin: auto; }
+
 video[poster] {
   height: 100%;
-  width: 350px; }
+  width: 350px;
+  margin: auto; }
 
 .box-product-slider {
   border-radius: 10px;
