--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -389,9 +389,13 @@ html {
     float: right;
   }
 }
+video{
+  margin: auto;
+}
 video[poster]{
   height:100%;
   width:350px;
+  margin: auto;
 }
 
 .box-product-slider {
