--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -389,12 +389,14 @@ html {
     float: right;
   }
 }
-video{
+
+video {
   margin: auto;
 }
-video[poster]{
-  height:100%;
-  width:350px;
+
+video[poster] {
+  height: 100%;
+  width: 350px;
   margin: auto;
 }
 
@@ -595,9 +597,11 @@ video[poster]{
     overflow-y: scroll;
     position: relative;
     text-align: justify;
-    td{
+
+    td {
       vertical-align: top;
     }
+
     ul {
       list-style: none !important;
     }
@@ -723,6 +727,10 @@ video[poster]{
   //-webkit-text-fill-color: transparent;
   color: white;
   margin: auto;
+  line-height: 16px;
+  small{
+    font-size: 15px;
+  }
 }
 
 #footer-wrapper.footer-light {
@@ -767,6 +775,17 @@ video[poster]{
         font-size: 16px;
       }
     }
+  }
+}
+
+.justify-content-center {
+  justify-content: center;
+  text-align: center;
+  margin-top: 20px;
+
+  i {
+    font-style: italic;
+    color: $primary-color;
   }
 }
 
