--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -491,7 +491,10 @@ video[poster] {
 .brand-logo {
   font-size: 25px;
   color: white;
-  margin: auto; }
+  margin: auto;
+  line-height: 16px; }
+  .brand-logo small {
+    font-size: 15px; }
 
 #footer-wrapper.footer-light {
   border-top: unset;
@@ -522,6 +525,14 @@ video[poster] {
       #footer-wrapper.footer-light.heading p a {
         color: white;
         font-size: 16px; }
+
+.justify-content-center {
+  justify-content: center;
+  text-align: center;
+  margin-top: 20px; }
+  .justify-content-center i {
+    font-style: italic;
+    color: #0e2b3d; }
 
 .slider {
   background-color: #0E2B3D4C; }
