--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -243,7 +243,7 @@ html {
       background: url("../img/sys_pp.png") no-repeat;
       margin-right: 5px; }
     .sys .small-box.bx-right {
-      background: url("../img/poll.png") no-repeat;
+      background: url("../img/poll2.png") no-repeat;
       margin-left: 5px; }
     .sys .small-box a {
       color: #0e2b3d;
