--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -366,7 +366,7 @@ html {
     }
 
     &.bx-right {
-      background: url("../img/poll.png") no-repeat;
+      background: url("../img/poll2.png") no-repeat;
       margin-left: 5px;
     }
 
