--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -599,7 +599,7 @@ video[poster] {
     text-align: justify;
 
     td {
-      vertical-align: top;
+      vertical-align: top!important;
     }
 
     ul {
