--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -829,6 +829,7 @@ video[poster] {
   color: white;
   margin-top: 20px;
   padding: 10px 30px;
+  text-transform: uppercase;
 }
 
 @media (max-height: 467px) {
