--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -823,7 +823,9 @@ video[poster] {
   }
 
 }
-
+.txt-brand{
+  color: $primary-color;
+}
 .btn-order {
   background: $primary-color;
   color: white;
