--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -557,9 +557,10 @@ video[poster] {
       object-fit: cover; }
 
 .qoute {
-  margin-left: 100px;
+  margin-left: 50px;
   padding-left: 20px; }
   .qoute li {
+    color: black;
     list-style: disc; }
 
 .txt-brand {
