--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -826,9 +826,10 @@ video[poster] {
 }
 
 .qoute {
-  margin-left: 100px;
+  margin-left: 50px;
   padding-left: 20px;
   li {
+    color: black;
     list-style: disc;
   }
 }
