--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -561,6 +561,7 @@ video[poster] {
   padding-left: 20px; }
   .qoute li {
     color: black;
+    font-size: 15px;
     list-style: disc; }
 
 .txt-brand {
