--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -572,7 +572,8 @@ video[poster] {
   color: white;
   margin-top: 20px;
   padding: 10px 30px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-weight: bold; }
 
 @media (max-height: 467px) {
   .header-style02 {
