--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -845,6 +845,7 @@ video[poster] {
   margin-top: 20px;
   padding: 10px 30px;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 @media (max-height: 467px) {
